--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,9 +26,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Ensure Test Data Directory
       run: |
-        mkdir -p Test_Data
-        # Add commands to copy or create the necessary test data files
-        cp -r path/to/your/test/data/* Test_Data/
+        mkdir -p api/Tests/Test_Data
+        cp data/*.json api/Tests/Test_Data/
     - name: Lint with flake8
       run: |
         # Treat all linting issues as warnings, allowing the build to continue
