--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,11 +1,8 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python cargohub application
 
 on:
   push:
-    branches: 
+    branches:
       - main
       - Development-Branch
 
@@ -14,24 +11,34 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
         cache: 'pip'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Ensure Test Data Directory
       run: |
-        mkdir -p api/Tests/Test_Data
-        cp data/*.json api/Tests/Test_Data/
+        if [ ! -d api/Tests/Test_Data ]; then
+          echo "Test_Data directory not found!"
+          exit 1
+        fi
+        echo "Test_Data directory exists, proceeding with tests."
+
+    - name: Debug Test Data Directory
+      run: ls -l api/Tests/Test_Data
+
     - name: Lint with flake8
       run: |
         # Treat all linting issues as warnings, allowing the build to continue
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Run tests
-      run: |
-        pytest api/Tests
+      run: pytest api/Tests
