--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,7 +2,7 @@ name: Python cargohub application
 
 on:
   push:
-    branches:
+    branches: 
       - main
       - Development-Branch
 
@@ -11,34 +11,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
         cache: 'pip'
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Ensure Test Data Directory
+    - name: Ensure test data is present
       run: |
-        if [ ! -d api/Tests/Test_Data ]; then
-          echo "Test_Data directory not found!"
+        # Check if the Test_Data folder exists
+        if [ ! -d "api/Tests/Test_Data" ]; then
+          echo "Test_Data folder is missing!"
           exit 1
         fi
-        echo "Test_Data directory exists, proceeding with tests."
-
-    - name: Debug Test Data Directory
-      run: ls -l api/Tests/Test_Data
-
+        ls api/Tests/Test_Data # Confirm the files are present
     - name: Lint with flake8
       run: |
         # Treat all linting issues as warnings, allowing the build to continue
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
     - name: Run tests
-      run: pytest api/Tests
+      run: |
+        pytest api/Tests
