--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,6 +33,10 @@ jobs:
       run: |
         # Treat all linting issues as warnings, allowing the build to continue
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Start server
+      run: |
+        nohup python api/main.py &
+        sleep 10  # Wait for the server to start
     - name: Run tests
       run: |
         cd api/Tests
