--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,7 +36,15 @@ jobs:
     - name: Start server
       run: |
         nohup python api/main.py &
-        sleep 10  # Wait for the server to start
+        sleep 30  # Wait for the server to start
+    - name: Check cargohub_test.db existence
+      run: |
+        if [ ! -f "api/Tests/Test_Data/cargohub_test.db" ]; then
+          echo "cargohub_test.db is missing!"
+          exit 1
+        else
+          echo "cargohub_test.db exists."
+        fi
     - name: Run tests
       run: |
         cd api/Tests
