--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,6 +5,7 @@ on:
     branches: 
       - main
       - Development-Branch
+  workflow_dispatch:
 
 jobs:
   build:
@@ -23,21 +24,33 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Ensure test data is present
       run: |
-        # Check if the Test_Data folder exists
         if [ ! -d "api/Tests/Test_Data" ]; then
           echo "Test_Data folder is missing!"
           exit 1
         fi
-        ls api/Tests/Test_Data # Confirm the files are present
+        ls api/Tests/Test_Data
     - name: Lint with flake8
       run: |
-        # Treat all linting issues as warnings, allowing the build to continue
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Start server
       run: |
-        nohup python api/main.py &
-        sleep 10  # Wait for the server to start
+        nohup python api/main.py & 
+        sleep 30
+      env:
+        API_KEY_1: ${{ secrets.API_KEY_1 }}
+        API_KEY_2: ${{ secrets.API_KEY_2 }}
+    - name: Check cargohub_test.db existence
+      run: |
+        if [ ! -f "api/Tests/Test_Data/cargohub_test.db" ]; then
+          echo "cargohub_test.db is missing!"
+          exit 1
+        else
+          echo "cargohub_test.db exists."
+        fi
     - name: Run tests
       run: |
         cd api/Tests
         pytest
+      env:
+        API_KEY_1: ${{ secrets.API_KEY_1 }}
+        API_KEY_2: ${{ secrets.API_KEY_2 }}
