--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,15 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Ensure test data is present
-      run: |
-        if [ ! -d "api/Tests/Test_Data" ]; then
-          echo "Test_Data folder is missing!"
-          exit 1
-        fi
-        ls api/Tests/Test_Data
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
@@ -46,7 +38,6 @@ jobs:
           exit 1
         else
           echo "cargohub_test.db exists."
-        fi
     - name: Run tests
       run: |
         cd api/Tests
