create test database before starting server in github action workflow

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,13 +24,10 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Start server
+    - name: Run cargohub_db.py to create test database
       run: |
-        nohup python api/main.py & 
-        sleep 30
-      env:
-        API_KEY_1: ${{ secrets.API_KEY_1 }}
-        API_KEY_2: ${{ secrets.API_KEY_2 }}
+        python api/cargohub_db.py
+        sleep 20
     - name: Check cargohub_test.db existence
       run: |
         if [ ! -f "api/Tests/Test_Data/cargohub_test.db" ]; then
@@ -38,6 +35,13 @@ jobs:
           exit 1
         else
           echo "cargohub_test.db exists."
+    - name: Start server
+      run: |
+        nohup python api/main.py & 
+        sleep 20
+      env:
+        API_KEY_1: ${{ secrets.API_KEY_1 }}
+        API_KEY_2: ${{ secrets.API_KEY_2 }}
     - name: Run tests
       run: |
         cd api/Tests
