--- a/.github/workflows/coverage_and_performance.yml
+++ b/.github/workflows/coverage_and_performance.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Run performance tests with coverage
         run: |
+          cd api/Tests
+          cd "performance tests"
           python performance_async_multiple
           python performance_async
           python performance_threads_multiple
