--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -32,7 +32,7 @@ jobs:
       - run: | 
           python "api/Tests/Performance Tests/performance.py"
       - run: | 
-          pkill -f "python api/main.py"
+          pkill -f "python api/main.py" || true
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
           API_KEY_2: ${{ secrets.API_KEY_2 }}
@@ -46,7 +46,7 @@ jobs:
       - run: | 
           python "api/Tests/Performance Tests/performance_async.py"
       - run: | 
-          pkill -f "python api/main.py"
+          pkill -f "python api/main.py" || true
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
           API_KEY_2: ${{ secrets.API_KEY_2 }}
@@ -60,7 +60,7 @@ jobs:
       - run: | 
           python "api/Tests/Performance Tests/performance_async_multiple.py"
       - run: | 
-          pkill -f "python api/main.py"
+          pkill -f "python api/main.py" || true
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
           API_KEY_2: ${{ secrets.API_KEY_2 }}
@@ -74,7 +74,7 @@ jobs:
       - run: | 
           python "api/Tests/Performance Tests/performance_threads_multiple.py"
       - run: | 
-          pkill -f "python api/main.py"
+          pkill -f "python api/main.py" || true
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
           API_KEY_2: ${{ secrets.API_KEY_2 }}
