--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -24,11 +24,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-cov
-
       - name: Run performance.py
         run: |
+          pkill -f "python api/main.py" || true
           nohup python api/main.py &
-          sleep 5
+          sleep 10
           python "api/Tests/Performance Tests/performance.py"
           pkill -f "python api/main.py" || true
         env:
