Dual server for integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # database files
 Cargohub.db
 Cargohub_Test.db
+Cargohub_3001.db
+Cargohub_Test_3001.db
 test_
 
 # Byte-compiled / optimized / DLL files
