When you make a commit it will run the Workflow

--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -3,8 +3,10 @@ name: Performance Test Synchronous
 on:
   push:
     branches:
-      - main
-      - Development-Branch
+      - '**'
+  pull_request:
+    branches:
+      - '**'
   workflow_dispatch:
 
 jobs:
