--- a/.github/workflows/performance_async.yml
+++ b/.github/workflows/performance_async.yml
@@ -3,8 +3,10 @@ name: Performance Test Asynchronous
 on:
   push:
     branches:
-      - main
-      - Development-Branch
+      - '**'
+  pull_request:
+    branches:
+      - '**'
   workflow_dispatch:
 
 jobs:
