testing build agian with error

--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -1,7 +1,7 @@
 name: Performance Test Synchronous
 
 on:
-  pull_request:
+  push:
     branches:
       - '**'
   workflow_dispatch:
@@ -25,6 +25,7 @@ jobs:
           pip install pytest pytest-cov
       - name: Run performance.py
         run: |
+          pkill -f "python api/main.py" || true
           nohup python api/main.py &
           sleep 10
           python "api/Tests/Performance Tests/performance.py"
