green ligbt hcekc

--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -1,9 +1,10 @@
-name: Performance Test Synchronous
+name: Python Performance Test
 
 on:
   push:
     branches:
-      - '**'
+      - main
+      - Development-Branch
   workflow_dispatch:
 
 jobs:
@@ -25,10 +26,50 @@ jobs:
           pip install pytest pytest-cov
       - name: Run performance.py
         run: |
-          pkill -f "python api/main.py" || true
           nohup python api/main.py &
-          sleep 10
+          sleep 5
+      - run: | 
           python "api/Tests/Performance Tests/performance.py"
+      - run: | 
+          pkill -f "python api/main.py" || true
+        env:
+          API_KEY_1: ${{ secrets.API_KEY_1 }}
+          API_KEY_2: ${{ secrets.API_KEY_2 }}
+      - name: Run performance_async.py
+        run: |
+          python api/cargohub_db.py
+      - run: |
+          nohup python api/main.py &
+          sleep 5
+      - run: | 
+          python "api/Tests/Performance Tests/performance_async.py"
+      - run: | 
+          pkill -f "python api/main.py" || true
+        env:
+          API_KEY_1: ${{ secrets.API_KEY_1 }}
+          API_KEY_2: ${{ secrets.API_KEY_2 }}
+      - name: Run performance_async_multiple.py
+        run: |
+          python api/cargohub_db.py
+      - run: |
+          nohup python api/main.py &
+          sleep 5
+      - run: | 
+          python "api/Tests/Performance Tests/performance_async_multiple.py"
+      - run: | 
+          pkill -f "python api/main.py" || true
+        env:
+          API_KEY_1: ${{ secrets.API_KEY_1 }}
+          API_KEY_2: ${{ secrets.API_KEY_2 }}
+      - name: Run performance_threads_multiple.py
+        run: |
+          python api/cargohub_db.py
+      - run: |
+          nohup python api/main.py &
+          sleep 5
+      - run: | 
+          python "api/Tests/Performance Tests/performance_threads_multiple.py"
+      - run: | 
           pkill -f "python api/main.py" || true
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
