--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -1,13 +1,13 @@
-name: Python Performance Test
+name: Performance Test Synchronous
 
 on:
-  pull_request:
+  push:
     branches:
       - '**'
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,50 +25,10 @@ jobs:
           pip install pytest pytest-cov
       - name: Run performance.py
         run: |
+          pkill -f "python api/main.py" || true
           nohup python api/main.py &
-          sleep 5
-      - run: | 
+          sleep 10
           python "api/Tests/Performance Tests/performance.py"
-      - run: | 
-          pkill -f "python api/main.py" || true
-        env:
-          API_KEY_1: ${{ secrets.API_KEY_1 }}
-          API_KEY_2: ${{ secrets.API_KEY_2 }}
-      - name: Run performance_async.py
-        run: |
-          python api/cargohub_db.py
-      - run: |
-          nohup python api/main.py &
-          sleep 5
-      - run: | 
-          python "api/Tests/Performance Tests/performance_async.py"
-      - run: | 
-          pkill -f "python api/main.py" || true
-        env:
-          API_KEY_1: ${{ secrets.API_KEY_1 }}
-          API_KEY_2: ${{ secrets.API_KEY_2 }}
-      - name: Run performance_async_multiple.py
-        run: |
-          python api/cargohub_db.py
-      - run: |
-          nohup python api/main.py &
-          sleep 5
-      - run: | 
-          python "api/Tests/Performance Tests/performance_async_multiple.py"
-      - run: | 
-          pkill -f "python api/main.py" || true
-        env:
-          API_KEY_1: ${{ secrets.API_KEY_1 }}
-          API_KEY_2: ${{ secrets.API_KEY_2 }}
-      - name: Run performance_threads_multiple.py
-        run: |
-          python api/cargohub_db.py
-      - run: |
-          nohup python api/main.py &
-          sleep 5
-      - run: | 
-          python "api/Tests/Performance Tests/performance_threads_multiple.py"
-      - run: | 
           pkill -f "python api/main.py" || true
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
