Workflow file now generates database first

--- a/.github/workflows/coverage_report.yml
+++ b/.github/workflows/coverage_report.yml
@@ -8,30 +8,38 @@ on:
 
 jobs:
   coverage:
-      runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-      steps:
-        - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-        - name: Set up Python 3.11
-          uses: actions/setup-python@v5
-          with:
-            python-version: "3.11"
-            cache: 'pip'
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: 'pip'
 
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-            pip install coverage
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
 
-        - name: Run tests and generate coverage report
-          run: |
-            coverage run -m pytest api/Tests/unit
-            coverage html
-            
-        - name: Upload coverage report
-          uses: actions/upload-artifact@v3
-          with:
-            name: coverage-report
-            path: coverage_html
+      - name: Run cargohub_db.py to create test database
+        run: |
+          python api/cargohub_db.py
+          sleep 5
+
+      - name: Run tests and generate coverage report
+        run: |
+          pytest api/Tests/unit --cov=api --cov-report=html:coverage_html --cov-report=xml:coverage.xml
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage_html
+
+      - name: Display coverage report
+        run: |
+          echo "Coverage report generated. You can download it from the 'Actions' tab."
