Fix coverage report workflow to change directory before running tests

--- a/.github/workflows/coverage_report.yml
+++ b/.github/workflows/coverage_report.yml
@@ -40,7 +40,9 @@ jobs:
 
       - name: Run tests and generate coverage report
         run: |
-          coverage run -m pytest api/Tests/unit
+          cd api/Tests/unit
+          coverage run -m pytest
+          cd -
           coverage html
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
