Add artifact upload step to performance workflows

--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -23,6 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-cov
+
       - name: Run performance.py
         run: |
           pkill -f "python api/main.py" || true
@@ -33,3 +34,9 @@ jobs:
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
           API_KEY_2: ${{ secrets.API_KEY_2 }}
+
+      - name: Upload performance results
+        uses: actions/upload-artifact@v3
+        with:
+          name: performance-results
+          path: api/Tests/Performance Tests/performance_results.csv
